fix(history): fixed 422 from /random endpoint
